--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,8 @@
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
     "electron-store": "^10.0.1",
-    "faiss-node": "^0.5.1"
+    "faiss-node": "^0.5.1",
+    "lucide-svelte": "^0.485.0"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
