--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,9 @@
     "@electron-toolkit/utils": "^4.0.0",
     "electron-store": "^10.0.1",
     "faiss-node": "^0.5.1",
-    "lucide-svelte": "^0.485.0"
+    "lucide-svelte": "^0.485.0",
+    "music-metadata": "^11.0.2",
+    "sound-play": "^1.1.0"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
