--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
+    "axios": "^1.8.4",
     "electron-store": "^10.0.1",
     "faiss-node": "^0.5.1",
     "lucide-svelte": "^0.485.0"
